Reference newly published image

--- a/devcontainer.json
+++ b/devcontainer.json
@@ -1,6 +1,6 @@
 {
     "name": "Shell",
-    "dockerFile": "Dockerfile",
+    "image": "cyrus01337/shell-devcontainer",
     "workspaceFolder": "/workspace",
     "features": {
         "ghcr.io/devcontainers/features/docker-outside-of-docker:1": {}
