--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -15,6 +15,7 @@ jobs:
               with:
                   ref: ${{ github.head_ref }}
                   fetch-depth: 0
+                  submodules: "true"
 
             - name: Extract project metadata
               env:
