--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -48,3 +48,31 @@ jobs:
                   push: true
                   tags: ${{ env.TAG }}
 
+            - name: Parse short commit hash
+              id: commit-hash
+              run: |
+                SHORT_COMMIT_HASH="$(git rev-parse --short HEAD)"
+
+                echo "SHORT_COMMIT_HASH=$SHORT_COMMIT_HASH" >> "$GITHUB_ENV"
+
+            - name: Dispatch build event to cyrus01337/neovim-devcontainer
+              env:
+                WORKFLOW_DISPATCH_TOKEN: ${{ secrets.WORKFLOW_DISPATCH_TOKEN }}
+              run: |
+                status_code=$(
+                    curl -L \
+                        -X POST \
+                        -H "Accept: application/vnd.github+json" \
+                        -H "Authorization: Bearer $WORKFLOW_DISPATCH_TOKEN" \
+                        -H "X-GitHub-Api-Version: 2022-11-28" \
+                        https://api.github.com/repos/cyrus01337/neovim-devcontainer/dispatches \
+                        -d '{"event_type":"Handle build request (shell-devcontainer@${{ env.SHORT_COMMIT_HASH }})"}' \
+                        | jq ".status" \
+                        | sed -E 's/"(.+)"/\1/'
+                )
+
+                if [[ $status_code ]]; then
+                    echo "Request status code: $status_code..."
+
+                   exit 1
+                fi
