--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -36,6 +36,11 @@ jobs:
                   echo "AUTHOR=$REAL_AUTHOR" >> "$GITHUB_ENV"
                   echo "TAG=$REAL_AUTHOR/shell-devcontainer" >> "$GITHUB_ENV"
 
+            - name: Setup SSH key
+              uses: webfactory/ssh-agent@v0.9.0
+              with:
+                ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+
             - uses: docker/setup-buildx-action@v3
               name: Setup Docker Buildx
 
@@ -51,6 +56,8 @@ jobs:
                   context: .
                   push: true
                   tags: ${{ env.TAG }}
+                  ssh: |
+                    default=${{ env.SSH_AUTH_SOCK }}
 
     dispatch:
         name: Dispatch build event
