--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -8,6 +8,7 @@ on:
             - "Dockerfile"
             - "*.sh"
             - ".github/workflows/**"
+    workflow_dispatch:
     repository_dispatch:
 
 jobs:
